# ai_orchestrator

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml  requirements.txt
ai_orchestrator/: __init__.py  __main__.py
ai_orchestrator/cli_adapters/: __init__.py  base.py  claude.py  codex.py  gemini.py  kilocode.py
ai_orchestrator/config/: __init__.py  defaults.yaml  settings.py
ai_orchestrator/core/: __init__.py  auth_checker.py  graceful_degradation.py  iteration_controller.py  orchestrator.py  post_checks.py  retry_utils.py  state_manager.py  workflow_phases.py
ai_orchestrator/dashboard/: __init__.py  schemas.py  server.py
ai_orchestrator/docs/: cli_prompting_comparison.md  gemini_prompting_guide.md  orchestrator_implementation_plan.md  orchestrator_plan_critique.md
ai_orchestrator/human_loop/: __init__.py  decision_gates.py
ai_orchestrator/metrics/: __init__.py  observability.py
ai_orchestrator/planning/: __init__.py  consensus_planner.py  plan_comparator.py
ai_orchestrator/project/: __init__.py  context.py  discovery.py  foundation_registry.py  greenfield.py  loader.py  scaffolder.py
ai_orchestrator/prompts/: __init__.py
ai_orchestrator/research/: __init__.py  _mcp_bridge.py  comparison.py  models.py  prompts.py  standard_research.py
ai_orchestrator/reviewing/: __init__.py  feedback_classifier.py  incremental_reviewer.py  review_consolidator.py  reviewer_router.py
ai_orchestrator/scripts/: __init__.py  setup_gemini_depth.py
ai_orchestrator/templates/: CLAUDE.md.template
ai_orchestrator/tests/: conftest.py  test_feedback_classifier.py  test_greenfield.py  test_incremental_reviewer.py  test_integration_full_workflow.py  test_iteration_controller.py  test_metrics.py  test_orchestrator_concurrent.py  test_plan_comparator.py  (+6 more)
best_practices/: patterns.json
data/: code_catalog.json
docs/: debug_everything.md
forensic_ediscovery/: DEEP_RESEARCH_PROMPT.md  __init__.py  __main__.py  bundle_generator.py  cli.py  config.py  email_parser.py  gemini_extractor.py  gmail_adapter.py  hasher.py  models.py  requirements.txt
scripts/: build_code_registry.py  check_diff_patterns.py  check_patterns.py  debug_everything.py  invoke_cli_critique.py  measure_blast_radius.py  post_implementation_check.py  verify_implementation.py
(+8 files in other folders)
